基本完成，放弃了一些功能

--- a/eshop/templates/sellhome.html
+++ b/eshop/templates/sellhome.html
@@ -8,7 +8,7 @@
 <body>
 <h1>ZShop销售管理系统</h1>
 
-
+<a href="/returngoods"><input type="button" value="退货>>"></a>
 <table>
     <tr>
         <th>热门商品</th>
