--- a/eshop/templates/sellhome.html
+++ b/eshop/templates/sellhome.html
@@ -7,7 +7,7 @@
 
 <body>
 <h1>ZShop销售管理系统</h1>
-
+<a href="/addsell"><input type="button" value="新增销售单>>"></a>
 <a href="/returngoods"><input type="button" value="退货>>"></a>
 <table>
     <tr>
