--- a/eshop/templates/returngoods.html
+++ b/eshop/templates/returngoods.html
@@ -5,27 +5,33 @@
     <title>Title</title>
 </head>
 <body>
+<div style="background-color: #F1F1F1;height: 200px">
+    <h1 align="center" style="line-height: 200px;font-family: ">添加退货记录</h1>
+
+</div>
+<div style="text-align: center">
     {{result}}
     <form method="post" action="/returngoods">
-    {% for item in box %}
+        {% for item in box %}
         {% csrf_token %}
         退货单号：
-        <input type="text" name="return_id" value="{{box.return_id}}" >
+        <input type="text" name="return_id" value="{{box.return_id}}">
         <br>
-        退货商品id：
+        商品的id：
         <input type="text" name="goods_name">
         <br>
         退货数量：
         <input type="text" name="return_num">
         <br>
-        退货原因
+        退货原因：
         <input type="text" name="return_reason">
         <br>
-        销售单号id
+        销售号id：
         <input type="text" name="sell_id">
         <br>
         <input type="submit" value="提交">
-    {% endfor %}
-</form>
+        {% endfor %}
+    </form>
+</div>
 </body>
 </html>
