--- a/eshop/templates/sellhome.html
+++ b/eshop/templates/sellhome.html
@@ -6,73 +6,81 @@
 </head>
 
 <body>
-<h1>ZShop销售管理系统</h1>
-<a href="/addsell"><input type="button" value="新增销售单>>"></a>
-<a href="/returngoods"><input type="button" value="退货>>"></a>
-<table>
-    <tr>
-        <th>热门商品</th>
-    </tr>
-    {% for item in hits %}
-    <tr>
-        <td>{{item.goods_id}}</td>
-    </tr>
-    {% endfor %}
-</table>
-<table>
-    <tr>
-        <th>冷门商品</th>
-    </tr>
-    {% for item in nbcs %}
-    <tr>
-        <td>{{item.goods_id}}</td>
-    </tr>
-    {% endfor %}
-</table>
-<a href="/allgoods"><input type="button" value="查看所有商品>>"></a>
+<div style="background:linear-gradient(to left,#03A9F4,#B3E5FC);height: 200px">
+    <h1 align="center" style="line-height: 200px;font-family:">ZShop销售管理系统</h1>
 
-<form method="post" action="/sellhome" style="display:none">
-    {% csrf_token %}
-    输入商品id:
-    <input type="text" name="goods_id">
-    <input type="submit" value="搜索">
-    <!--输入订单号:-->
-    <!--<input type="text" name="sell_id">-->
-    <!--<input type="submit" value="搜索">-->
-    <!--输入顾客id：-->
-    <!--<input type="text" name="customer_id">-->
-    <!--<input type="submit" value="搜索">-->
-    <!--输入销售员id-->
-    <!--<input type="text" name="seller_id">-->
-    <!--<input type="submit" value="搜索">-->
-</form>
-<a href="/show_all_sell"><input type="button" value="按日期查看所有销售单>>"></a>
-    最新销售数据
-<table border="1" style="margin: 0 auto;text-align: center;">
-    <tr>
-        <th>订单号</th>
-        <th>商品id</th>
-        <th>销售单价</th>
-        <th>销售数量
-        <th>顾客id</th>
-        <th>销售员id</th>
-        <th>销售时间</th>
-        <th>订单状态</th>
-    </tr>
-    {% for item in sells %}
-    <tr>
-        <td>{{item.sell_id}}</td>
-        <td>{{item.goods_id}}</td>
-        <td>{{item.sell_price}}</td>
-        <td>{{item.sell_num}}</td>
-        <td>{{item.customer_id}}</td>
-        <td>{{item.seller_id}}</td>
-        <td>{{item.sell_time}}</td>
-        <td>{{item.sell_statement}}</td>
-    </tr>
-    {% endfor %}
-</table>
+</div>
+<div class="main" style="margin-left: 10%;margin-right: 10%">
 
 
+    <div style="float: left;width: 30%">
+        <div style="margin-left: 50px">
+            <a href="/addsell"><input type="button" value="新增销售单>>"></a>
+            <a href="/returngoods"><input type="button" value="退货>>"></a>
+        </div>
+        <div style="margin-left: 50px;margin-top: 20px">
+            <table>
+                <tr>
+                    <th>热门商品</th>
+
+                    {% for item in hits %}
+                <tr>
+                    <td>{{item.goods_id}}</td>
+                    <td>{{item.goods_name}}</td>
+                    <td>总销量{{item.total_num}}</td>
+
+                </tr>
+                {% endfor %}
+            </table>
+            <table>
+                <tr>
+                    <th>冷门商品</th>
+                </tr>
+                {% for item in nbcs %}
+                <tr>
+                    <td>{{item.goods_id}}</td>
+                    <td>{{item.goods_name}}</td>
+                    <td>总销量{{item.total_num}}</td>
+                </tr>
+                {% endfor %}
+            </table>
+            <a href="/allgoods"><input type="button" value="查看所有商品>>"></a>
+        </div>
+    </div>
+    <div style="float: right;width: 65%">
+        <form method="post" action="/sellhome" style="display:none">
+            {% csrf_token %}
+            输入商品id:
+            <input type="text" name="goods_id">
+            <input type="submit" value="搜索">
+        </form>
+        <a href="/show_all_sell"><input type="button" value="按日期查看所有销售单>>"></a>
+        最新销售数据
+        <table border="1" style="margin: 0 auto;text-align: center;">
+            <tr>
+                <th>订单号</th>
+                <th>商品id</th>
+                <th>销售单价</th>
+                <th>销售数量
+                <th>顾客id</th>
+                <th>销售员id</th>
+                <th>销售时间</th>
+                <th>订单状态</th>
+            </tr>
+            {% for item in sells %}
+            <tr>
+                <td>{{item.sell_id}}</td>
+                <td>{{item.goods_id}}</td>
+                <td>{{item.sell_price}}</td>
+                <td>{{item.sell_num}}</td>
+                <td>{{item.customer_id}}</td>
+                <td>{{item.seller_id}}</td>
+                <td>{{item.sell_time}}</td>
+                <td>{{item.sell_statement}}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+</div>
 </body>
 </html>
