--- a/eshop/templates/sellhome.html
+++ b/eshop/templates/sellhome.html
@@ -3,11 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>SellManage</title>
+    <style>
+        .addsell {
+            font-family:本墨津黑;
+            height: 62px;
+            font-size: 30px;
+            padding:10px 14px 0px 14px;
+            margin:20px 8px 0px 0;
+            display: inline-block;
+            color: black;
+            box-sizing: border-box;
+            border-radius: 4px;
+            background-color: #B3E5FC;
+            border: 1px solid #E4E7ED;
+            cursor: pointer;
+            transition: border 0.4s, color 0.4s;
+            outline: none;
+            position: relative;
+            overflow: hidden;
+        }
+    </style>
 </head>
 
 <body>
 <div style="background:linear-gradient(to left,#03A9F4,#B3E5FC);height: 200px">
-    <h1 align="center" style="line-height: 200px;font-family:">ZShop销售管理系统</h1>
+    <h1 align="center" style="line-height: 150px;font-family: 腾讯体 "  >ZShop销售管理系统</h1>
 
 </div>
 <div class="main" style="margin-left: 10%;margin-right: 10%">
@@ -15,8 +35,8 @@
 
     <div style="float: left;width: 30%">
         <div style="margin-left: 50px">
-            <a href="/addsell"><input type="button" value="新增销售单>>"></a>
-            <a href="/returngoods"><input type="button" value="退货>>"></a>
+            <a href="/addsell"><input type="button" value="新增销售单>>" class="addsell"></a>
+            <a href="/returngoods"><input type="button" value="退货>>" class="addsell" ></a>
         </div>
         <div style="margin-left: 50px;margin-top: 20px">
             <table>
