搞完了，完美！（）

--- a/eshop/templates/allsell.html
+++ b/eshop/templates/allsell.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <div style="background:linear-gradient(to left,#03A9F4,#B3E5FC);height: 200px">
-    <h1 align="center" style="line-height: 200px;font-family:">所有销售记录</h1>
+    <h1 align="center" style="line-height: 150px;font-family: 腾讯体;padding-top: 30px;font-size: 50px;color: #323741;">所有销售记录</h1>
 </div>
-<div>
+<div style="margin-top: 20px">
     <div style="text-align: center">
     <form method="post" action="/show_all_sell">
         {% csrf_token %}
@@ -22,6 +22,7 @@
 
     </form>
     </div>
+    <div style="margin-top: 20px">
     <table border="1" style="margin: 0 auto;text-align: center;">
         <tr>
             <th>订单号</th>
@@ -48,6 +49,7 @@
         </tr>
         {% endfor %}
     </table>
+    </div>
 </div>
 </body>
 </html>
