--- a/eshop/templates/modifysell.html
+++ b/eshop/templates/modifysell.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:display="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<form method="post" action="/modifysell">
+<div style="text-align: center">
+<form method="post" action="/modifysell/600001">
+    <h1 style="font-family: 腾讯体">{{result}}</h1>
     {% for item in sells %}
     {% csrf_token %}
-    <h3>销售单号{{ item.sell_id }}"</h3>
-    <br>
-    <h3>商品编号{{ item.goods_id }}"</h3>
+    <h2>销售单号{{ item.sell_id }}</h2>
+    <h2>商品编号{{ item.goods_id }}</h2>
     销售价格
-    <input type="text" name="sell_price" value="{{ item.sell_price }}">
+    <input type="text" name="sell_id" value="{{ item.sell_price }}" >
+    <input type="text" name="goods_id" value="{{ item.goods_id }}" style="display: none">
+    <input type="text" name="sell_price" value="{{ item.sell_price }}" style="display: none">
     <br>
     销售数量
     <input type="text" name="sell_num" value="{{ item.sell_num }}">
@@ -23,9 +26,17 @@
     销售员id
     <input type="text" name="seller_id" value="{{ item.seller_id }}">
     <br>
+    订单状态
+    <select name="sell_statement">
+            <option value="done">完成</option>
+            <option value="ready">草拟</option>
+            <option value="doing">执行</option>
+            <option value="cancle">取消</option>
+    </select>
     <br>
     <input type="submit" value="修改">
     {% endfor %}
 </form>
+</div>>
 </body>
 </html>
